--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <title>One Page Wonder - Start Bootstrap Template</title>
 
+    <!-- Smooth Scroll -->
+    <script src="js/smooth-scroll.js"></script>
+    <script src="js/smooth-scroll.min.js"></script>
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -39,19 +43,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a data-scroll class="navbar-brand" href="#">
+                  <img class=" profile-pic img-circle img-responsive" src="../emmanuelobo.github.io/img/Cali.jpg">
+                </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#about">About</a>
+                        <a data-scroll href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a data-scroll href="#stack">My Stack</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a data-scroll href="#contact">Projects</a>
+                    </li>
+                    <li>
+                        <a data-scroll href="#connect">Connect</a>
+                    </li>
+                    <li>
+                        <a href="EmmanuelObogbaimhe_Resume.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -64,8 +76,8 @@
     <header class="header-image">
         <div class="headline">
             <div class="container">
-                <h1>One Page Wonder</h1>
-                <h2>Will Knock Your Socks Off</h2>
+                <h1>Emmanuel Obogbaimhe</h1>
+                <h2>Software Engineer | Revolutionist</h2>
             </div>
         </div>
     </header>
@@ -77,17 +89,17 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">This First Heading
-                <span class="text-muted">Will Catch Your Eye</span>
+            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <h2 class="featurette-heading">About
+                <span class="text-muted">[Me]</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">My name is Emmanuel Obogbaimhe, I'm a recent college grad. Software Engineer.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
-        <div class="featurette" id="services">
+        <div class="featurette" id="stack">
             <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">The Second Heading
                 <span class="text-muted">Is Pretty Cool Too.</span>
@@ -99,7 +111,7 @@
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">The Third Heading
                 <span class="text-muted">Will Seal the Deal.</span>
             </h2>
@@ -108,11 +120,23 @@
 
         <hr class="featurette-divider">
 
+        <!-- Fourth Featurette -->
+        <div class="featurette" id="connect">
+            <h2 class="featurette-heading">Connect w/
+                <span class="text-muted">Me:</span>
+            </h2>
+            <p class="lead socials">LinkedIn | GitHub | Twitter</p>
+        </div>
+
+
         <!-- Footer -->
         <footer>
+          <script>
+            smoothScroll.init();
+          </script>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Emmanuel Obogbaimhe 2016</p>
                 </div>
             </div>
         </footer>
@@ -121,10 +145,11 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="js/lib/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+
 
 </body>
 
