--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>One Page Wonder - Start Bootstrap Template</title>
+    <title>Emmanuel Obogbaimhe</title>
 
     <!-- Smooth Scroll -->
     <script src="js/smooth-scroll.js"></script>
