--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a data-scroll href="#connect">Connect</a>
                     </li>
                     <li>
-                        <a href="EmmanuelObogbaimhe_Resume.pdf">Resume</a>
+                        <a href="EmmanuelObogbaimhe_Resume.htm">Resume</a>
                     </li>
                 </ul>
             </div>
