--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a data-scroll href="#stack">My Stack</a>
                     </li>
                     <li>
-                        <a data-scroll href="#contact">Projects</a>
+                        <a data-scroll href="#projects">Projects</a>
                     </li>
                     <li>
                         <a data-scroll href="#connect">Connect</a>
@@ -89,33 +89,35 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <!--<img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">-->
             <h2 class="featurette-heading">About
                 <span class="text-muted">[Me]</span>
             </h2>
-            <p class="lead">My name is Emmanuel Obogbaimhe, I'm a recent college grad. Software Engineer.</p>
+            <p class="lead">Hi, I'm Emmanuel (as you may have already known from the header), 
+            I'm a 22 year old Software Engineer recently graduated from the University at Buffalo (Go Bulls!). 
+            I inspire to not just create software products but products that will change the world.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="stack">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">The Second Heading
-                <span class="text-muted">Is Pretty Cool Too.</span>
+            <!--<img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">-->
+            <h2 class="featurette-heading">My 
+                <span class="text-muted">Stack:</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Java | JavaScript | C/C++ | HTML | CSS</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
-        <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">The Third Heading
-                <span class="text-muted">Will Seal the Deal.</span>
+        <div class="featurette" id="projects">
+            <!--<img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">-->
+            <h2 class="featurette-heading">My
+                <span class="text-muted">Projects</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Stormer | Devotional | Chat Client | JotIt | Quizzer </p>
         </div>
 
         <hr class="featurette-divider">
