--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a data-scroll href="#about">About</a>
+                        <a class="menu-item" data-scroll href="#about">About</a>
                     </li>
                     <li>
-                        <a data-scroll href="#stack">My Stack</a>
+                        <a class="menu-item" data-scroll href="#stack">My Stack</a>
                     </li>
                     <li>
-                        <a data-scroll href="#projects">Projects</a>
+                        <a class="menu-item" data-scroll href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a data-scroll href="#connect">Connect</a>
+                        <a class="menu-item" data-scroll href="#connect">Connect</a>
                     </li>
                     <li>
                         <a href="EmmanuelObogbaimhe_Resume.htm">Resume</a>
