--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
             <h2 class="featurette-heading">My 
                 <span class="text-muted">Stack:</span>
             </h2>
+            <div class="language-logo"><img class="img-circle img-responsive lang-logo" src="../img/languages/Expressjs.png"></div>
+            <div class="language-logo"><img class="img-circle img-responsive lang-logo" src="../img/languages/node.png"></div>
+            <div class="language-logo"><img class="img-circle img-responsive lang-logo" src="../img/languages/CSS.png"></div>
+            <div class="language-logo"><img class="img-circle img-responsive lang-logo" src="../img/languages/Cplusplus.png"></div>
+            <div class="language-logo"><img class="img-circle img-responsive lang-logo" src="../img/languages/Java_logo.png"></div>
+            <div class="language-logo"><img class="img-circle img-responsive lang-logo" src="../img/languages/javascript-shield.png"></div>
+            <div class="language-logo"><img class="img-circle img-responsive lang-logo" src="../img/languages/HTML5_logo.png"></div>
             <p class="lead">Java | JavaScript | C/C++ | HTML | CSS</p>
         </div>
 
