--- a/index.html
+++ b/index.html
@@ -107,13 +107,15 @@
                 <span class="text-muted">Stack:</span>
             </h2>
             <div class="row">
-            <div class="col-sm-8"><img class="img-circle img-responsive lang-logo" src="../img/languages/Expressjs.png"></div>
-            <div class="col-sm-8"><img class="img-circle img-responsive lang-logo" src="../img/languages/node.png"></div>
-            <div class="col-sm-8"><img class="img-circle img-responsive lang-logo" src="../img/languages/CSS.png"></div>
-            <div class="col-sm-8"><img class="img-circle img-responsive lang-logo" src="../img/languages/Cplusplus.png"></div>
-            <div class="col-sm-8"><img class="img-circle img-responsive lang-logo" src="../img/languages/Java_logo.png"></div>
-            <div class="col-sm-8"><img class="img-circle img-responsive lang-logo" src="../img/languages/javascript-shield.png"></div>
-            <div class="col-sm-8"><img class="img-circle img-responsive lang-logo" src="../img/languages/HTML5_logo.png"></div>
+            <div class="col-md-4"><img class="img-circle img-responsive lang-logo" src="../img/languages/Expressjs.png"></div>
+            <div class="col-md-4"><img class="img-circle img-responsive lang-logo" src="../img/languages/node.png"></div>
+            <div class="col-md-4"><img class="img-circle img-responsive lang-logo" src="../img/languages/CSS.png"></div>
+            </div>
+            <div class="row">
+            <div class="col-md-4"><img class="img-circle img-responsive lang-logo" src="../img/languages/Cplusplus.png"></div>
+            <div class="col-md-4"><img class="img-circle img-responsive lang-logo" src="../img/languages/Java_logo.png"></div>
+            <div class="col-md-4"><img class="img-circle img-responsive lang-logo" src="../img/languages/javascript-shield.png"></div>
+            <div class="col-md-4"><img class="img-circle img-responsive lang-logo" src="../img/languages/HTML5_logo.png"></div>
             </div>
             <p class="lead">Java | JavaScript | C/C++ | HTML | CSS</p>
         </div>
