--- a/index.html
+++ b/index.html
@@ -106,18 +106,15 @@
             <h2 class="featurette-heading">My 
                 <span class="text-muted">Stack:</span>
             </h2>
-            <div class="container">
             <div class="row">
-            <div class="col-md-6"><img class="img-responsive lang-logo" src="../img/languages/Expressjs.png"></div>
-            <div class="col-md-6"><img class="img-responsive lang-logo" src="../img/languages/node.png"></div>
-            <div class="col-md-6"><img class="img-responsive lang-logo" src="../img/languages/CSS.png"></div>
-            <div class="col-md-6"><img class="img-responsive lang-logo" src="../img/languages/Cplusplus.png"></div>
-            <div class="col-md-6"><img class="img-responsive lang-logo" src="../img/languages/Java_logo.png"></div>
-            <div class="col-md-6"><img class="img-responsive lang-logo" src="../img/languages/javascript-shield.png"></div>
-            <div class="col-md-6"><img class="img-responsive lang-logo" src="../img/languages/HTML5_logo.png"></div>
+            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/Expressjs.png"></div>
+            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/node.png"></div>
+            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/CSS.png"></div>
+            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/Cplusplus.png"></div>
+            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/Java_logo.png"></div>
+            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/javascript-shield.png"></div>
+            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/HTML5_logo.png"></div>
             </div>
-            </div>
-        </div>
 
         <hr class="featurette-divider">
 
