--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 <span class="text-muted">Stack:</span>
             </h2>
             <div class="row">
-            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/Expressjs.png"></div>
-            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/node.png"></div>
-            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/CSS.png"></div>
-            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/Cplusplus.png"></div>
-            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/Java_logo.png"></div>
-            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/javascript-shield.png"></div>
-            <div class="col-sm-8"><img class="img-responsive lang-logo" src="../img/languages/HTML5_logo.png"></div>
+            <img class="img-responsive lang-logo" src="../img/languages/Expressjs.png">
+            <img class="img-responsive lang-logo" src="../img/languages/node.png">
+            <img class="img-responsive lang-logo" src="../img/languages/CSS.png">
+            <img class="img-responsive lang-logo" src="../img/languages/Cplusplus.png">
+            <img class="img-responsive lang-logo" src="../img/languages/Java_logo.png">
+            <img class="img-responsive lang-logo" src="../img/languages/javascript-shield.png">
+            <img class="img-responsive lang-logo" src="../img/languages/HTML5_logo.png">
             </div>
 
         <hr class="featurette-divider">
