--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <img class="img-responsive lang-logo" src="../img/languages/Java_logo.png">
             <img class="img-responsive lang-logo" src="../img/languages/javascript-shield.png">
             <img class="img-responsive lang-logo" src="../img/languages/HTML5_logo.png">
+            <img class="img-responsive lang-logo" src="../img/languages/angular.png">
             </div>
 
         <hr class="featurette-divider">
