--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="featurette" id="about">
             <!--<img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">-->
             <h2 class="featurette-heading">About
-                <span class="text-muted">[Me]</span>
+                <span class="text-muted">Me</span>
             </h2>
             <p class="lead">Hi, I'm Emmanuel (as you may have already known from the header), 
             I'm 22 years old Software Engineer recently graduated from the University at Buffalo (Go Bulls!). 
