--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Smooth Scroll -->
     <script src="js/smooth-scroll.js"></script>
     <script src="js/smooth-scroll.min.js"></script>
+    
+    <!--Favicon-->
+    <link rel="icon" href="img/Manny_Favicon.gif" type=image/gif>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
