--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="js/smooth-scroll.min.js"></script>
     
     <!--Favicon-->
-    <link rel="icon" href="img/Manny_Favicon.gif" type=image/gif>
+    <link rel="icon" href="img/favicon.gif" type=image/gif>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
