--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <span class="text-muted">Me</span>
             </h2>
             <p class="lead">Hi, I'm Emmanuel (as you may have already known from the header), 
-            I'm 22 years old Software Engineer recently graduated from the University at Buffalo (Go Bulls!). 
+            I'm a 22 year old Software Engineer. Recently graduated from the University at Buffalo (Go Bulls!). 
             I inspire to not just create software products but products that will change the world as well as the way we view technology.</p>
         </div>
 
