--- a/index.html
+++ b/index.html
@@ -33,11 +33,6 @@
 
 </head>
 
-<script>
-    alert('This Page is Under-Construction!');
-</script>
-<body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -100,7 +95,7 @@
                 <span class="text-muted">Me</span>
             </h2>
             <p class="lead">Hi, I'm Emmanuel (as you may have already known from the header), 
-            I'm a 22 year old Software Engineer. Recently graduated from the University at Buffalo (Go Bulls!). 
+            I'm a 22 year old Software Engineer. UB Alum. 
             I inspire to not just create software products but products that will change the world as well as the way we view technology.</p>
         </div>
 
